2010-04-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: ContentName
	  can be null if the file is not saved.

2010-04-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Added some
	  checks to avoid updating breakpoints when the editor has
	  been disposed.

2010-04-13  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs:
	  Implemented 'Bug 595598 - Intelligent placing of
	  semi-colons'.

2010-04-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implemented
	  'Bug 595587 - Move code block to correct depth when
	  Alt+arrow moving'.

2010-04-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  595584 - Code completion leaves the cursor in the wrong
	  place'.

2010-04-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed 'Bug
	  595601 - Make "add matching quote" aware of whether or not
	  it is within a string already'.

2010-04-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Text
	  editor extension is disposed in Document.

2010-04-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Dispose
	  text editor extensions.

2010-04-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implemented
	  command for 'Bug 595228 - Block selection should be usable
	  from keyboard'

2010-04-09  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/DebugValueMarker.cs: Removed
	  debugvaluemarker (it's now done by pinnedquickwatch).

2010-04-08  Lluis Sanchez Gual  <lluis@novell.com>
