@@ -1,3 +1,9 @@
+2010-04-15  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
+	  596511 - Code completion removes block selection and only
+	  affects 1 line'
+
 2010-04-13  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.SourceEditor/SourceEditorView.cs: ContentName
